k8s/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: yash-dev
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
